--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p>We appreciate your consideration about our teaching philosophy</p>
     </header>
 
-    <main class="transition-word">
+    <main>
         <section class="history">
             <h2>History background</h2>
             <figure>
